// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<TooltipContainer
  containerElement="span"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
>
  <span>
    hi
  </span>
  <Portal
    containerInfo={<div />}
  >
    <div
      aria-hidden="true"
      className="Tooltip Tooltip--place-top Tooltip--hidden"
      contentEditable={false}
      data-test-id="cf-ui-tooltip"
      onFocus={[Function]}
      onMouseOver={[Function]}
      role="tooltip"
      style={
        Object {
          "left": null,
          "maxWidth": 360,
          "top": null,
        }
      }
    >
      <InViewport
        offset={0}
        onOverflowBottom={[Function]}
        onOverflowLeft={[Function]}
        onOverflowRight={[Function]}
        onOverflowTop={[Function]}
        testId="cf-ui-in-viewport"
      >
        Tooltip content
      </InViewport>
    </div>
  </Portal>
</TooltipContainer>
`;

exports[`renders the component with a id attribute 1`] = `
<TooltipContainer
  aria-describedby="Tooltip"
  containerElement="span"
  id="Tooltip"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
>
  <span>
    hi
  </span>
</TooltipContainer>
`;

exports[`renders the component with a id attribute 2`] = `
<TooltipContainer
  containerElement="span"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
>
  <span>
    hi
  </span>
</TooltipContainer>
`;

exports[`renders the component with a place attribute 1`] = `
<TooltipContainer
  containerElement="span"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
>
  <span>
    hi
  </span>
  <Portal
    containerInfo={<div />}
  >
    <div
      aria-hidden="true"
      className="Tooltip Tooltip--place-left Tooltip--hidden"
      contentEditable={false}
      data-test-id="cf-ui-tooltip"
      onFocus={[Function]}
      onMouseOver={[Function]}
      role="tooltip"
      style={
        Object {
          "left": null,
          "maxWidth": 360,
          "top": null,
        }
      }
    >
      <InViewport
        offset={0}
        onOverflowBottom={[Function]}
        onOverflowLeft={[Function]}
        onOverflowRight={[Function]}
        onOverflowTop={[Function]}
        testId="cf-ui-in-viewport"
      >
        Tooltip content
      </InViewport>
    </div>
  </Portal>
</TooltipContainer>
`;

exports[`renders the component with a target wrapper classname 1`] = `
<TooltipContainer
  containerElement="span"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
  targetWrapperClassName="target-wrapper-class-name"
>
  <span>
    hi
  </span>
  <Portal
    containerInfo={<div />}
  >
    <div
      aria-hidden="true"
      className="Tooltip Tooltip--place-top Tooltip--hidden"
      contentEditable={false}
      data-test-id="cf-ui-tooltip"
      onFocus={[Function]}
      onMouseOver={[Function]}
      role="tooltip"
      style={
        Object {
          "left": null,
          "maxWidth": 360,
          "top": null,
        }
      }
    >
      <InViewport
        offset={0}
        onOverflowBottom={[Function]}
        onOverflowLeft={[Function]}
        onOverflowRight={[Function]}
        onOverflowTop={[Function]}
        testId="cf-ui-in-viewport"
      >
        Tooltip content
      </InViewport>
    </div>
  </Portal>
</TooltipContainer>
`;

exports[`renders the component with an additional class name 1`] = `
<TooltipContainer
  containerElement="span"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  setRef={[Function]}
>
  <span>
    hi
  </span>
  <Portal
    containerInfo={<div />}
  >
    <div
      aria-hidden="true"
      className="Tooltip Tooltip--place-top extra-class-name Tooltip--hidden"
      contentEditable={false}
      data-test-id="cf-ui-tooltip"
      onFocus={[Function]}
      onMouseOver={[Function]}
      role="tooltip"
      style={
        Object {
          "left": null,
          "maxWidth": 360,
          "top": null,
        }
      }
    >
      <InViewport
        offset={0}
        onOverflowBottom={[Function]}
        onOverflowLeft={[Function]}
        onOverflowRight={[Function]}
        onOverflowTop={[Function]}
        testId="cf-ui-in-viewport"
      >
        Tooltip content
      </InViewport>
    </div>
  </Portal>
</TooltipContainer>
`;
